--- a/AppSettings.json
+++ b/AppSettings.json
@@ -1,11 +1,11 @@
 {
   "array": [
     {
-      "url": "https://smartanimo.com/1PmncRLq",
-      "urlSecond": "https://smartanimo.com/1PmncRLq",
+      "url": "https://raw.githubusercontent.com/Lukos247/Gampro/main/Privacy%20Policy",
+      "urlSecond": "https://raw.githubusercontent.com/Lukos247/Gampro/main/Privacy%20Policy",
       "randomValue": "11",
       "geo":"RUS UK",
-      "flag": "1"
+      "flag": "0"
     }
   ]
 }
