--- a/AppSettings.json
+++ b/AppSettings.json
@@ -4,7 +4,7 @@
       "url": "https://smartanimo.com/1PmncRLq",
       "urlSecond": "https://smartanimo.com/1PmncRLq",
       "randomValue": "11",
-      "geo":"RUS UKR KAZ CAN KOR",
+      "geo":"RUS UKR KAZ CAN ITA KOR KOR",
       "flag": "1"
     }
   ]
