--- a/AppSettings.json
+++ b/AppSettings.json
@@ -4,7 +4,7 @@
       "url": "https://smartanimo.com/1PmncRLq",
       "urlSecond": "https://smartanimo.com/1PmncRLq",
       "randomValue": "11",
-      "geo":"RUS UKR KAZ CAN ITA KOR KOR",
+      "geo":"RUS UKR AZE AUS AUT DNK ESP POL FRA TUR KAZ ITA DEU CAN NOR HUN NLD NZL ROU UZB PRT BGD PAK EST SVK SVN LVA LTU HRV BGR BLR BEL CHE FIN LUX GLP MTQ MYT ARE REU IRL MEX BRA ECU PER CZE CHL SLV JPN KOR",
       "flag": "1"
     }
   ]
